--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: ruby
 rvm:
   - 2.2.1
   - 2.1.5
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 script:
   - bundle exec cucumber
